tdf#135938 - Refresh cross-reference name after filter selection has changed

Change-Id: I3e92adc10da089372637174f8551d531aea2fb13
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140985
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>